fixes overflow

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -43,41 +43,28 @@ body {
   background: #333;
   color:white;
   font-family: 'Lato', sans-serif;
-  overflow: hidden;
-}
-
-@include breakpoint(500px) {
-  body {
-    overflow: visible;
-  }
 }
 
 
 .vid-img {
   opacity: 0;
-  position: absolute;
-  height: 355px;
   max-width: auto;
-  z-index: 1;
-  top:55px;
+  height: 355px;
   @include trans;  
 }
 
 video {
   display: none;
   opacity: 0;
-  position: absolute;
   height: 100%;
   max-height: 730px;
-  z-index: 1;
-  top:55px;
   @include trans;
 }
 .home video, .home .vid-img {
   opacity: 0.1;
 }
 
-@include breakpoint(500px) {
+@include breakpoint($med) {
   .vid-img {
     display: none;
   }
@@ -94,16 +81,44 @@ video {
   }
 }
 
+.vid-wrap {
+  position: absolute;
+  top:55px;
+  z-index: 1;
+  height: 355px;
+  overflow: hidden;
+  width: 100%;
+  @include breakpoint($med) {
+    height: 100%;
+    max-height: 730px;
+    .vid-img {
+      height: auto;
+      max-height: initial;
+      width: 100%; 
+    }
+  }
+  @include breakpoint(1298px) {
+    height: auto;
+    max-height: initial;
+    width: 100%;    
+  }
+}
+
 
 
 .wrap {
   @include breakpoint($med) {
+    overflow: hidden;
     position: relative;
     z-index: 100;
     min-height: 100%;
     /* equal to footer height */
     margin-bottom: -170px; 
   }
+  @include breakpoint(500px) {
+    overflow: visible;
+  }
+
 }
 .wrap:after {
   content: "";
